--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
-<table>
-  <tr>
-    <th *ngFor="let column of days">
-      {{column}}
-    </th>
-  </tr>
-  <tr *ngFor="let row of weeks">
-    <td *ngFor="let column of days; let i = index;">
-     {{row[column]}}
-    </td>
-    
-  </tr>
-</table>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#"></a>
+    </div>
+  </div>
+</nav>
+<div class="jumbotron">
+  <h4>Closure Dates</h4>
+</div>
+<br>
+<app-delivery-closure></app-delivery-closure>
