--- a/src/app/delivery-closure/delivery-closure.component.html
+++ b/src/app/delivery-closure/delivery-closure.component.html
@@ -1,9 +1,20 @@
 <div class="container">
+  <div class="row">
+    
+    <a href="#"><span class="glyphicon glyphicon-menu-left" aria-hidden="false"></span></a><a href="#" class="prevYear">2020</a><a href="#" class="currentYear">2021</a><a href="#" class="nextYear">2022</a>
+    <a href="#"><span class="glyphicon glyphicon-menu-right" aria-hidden="false"></span></a>
+  
+</div>
+<br>
+</div>
+<div class="container">
+  
+  
     <div class="row">
       <div class="col-md-3">
       <a href="#"><span class="glyphicon glyphicon-menu-left" aria-hidden="false"></span></a>
       </div>
-      <div class="col-md-3 col-md-offset-3">
+      <div class="col-md-3">
       <a href="#"><span class="glyphicon glyphicon-menu-right" aria-hidden="false"></span></a>
     </div>
     </div>
@@ -12,6 +23,7 @@
      
       
       <div class="col-lg-4">
+        
         <h3 style="text-align: center;">JAN</h3>
         <table >
           <tr>
